--- a/output/categories.html
+++ b/output/categories.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <meta name="author" content="mult1vac">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="mult1vac.me/theme/css/styles.css"/>
   </head>
 
   <body>
     <div class="site">
       <header>
         <ul class="nav">
-          <li><a class="site-name" href="">数据之下</a></li>
+          <li><a class="site-name" href="mult1vac.me">数据之下</a></li>
             <li><a class="float-right" href="/pages/about.html">关于</a></li>
             <li><a class="float-right" href="/index.html">文章</a></li>
         </ul>
@@ -20,10 +20,10 @@
 
       <div id="content">
 <ul>
-    <li><a href="/category/ce-shi.html">测试</a></li>
-    <li><a href="/category/kaggle.html">kaggle</a></li>
-    <li><a href="/category/math.html">math</a></li>
-    <li><a href="/category/misc.html">misc</a></li>
+    <li><a href="mult1vac.me/category/ce-shi.html">测试</a></li>
+    <li><a href="mult1vac.me/category/kaggle.html">kaggle</a></li>
+    <li><a href="mult1vac.me/category/math.html">math</a></li>
+    <li><a href="mult1vac.me/category/misc.html">misc</a></li>
 </ul>
       </div>
 
