--- a/output/authors.html
+++ b/output/authors.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <meta name="author" content="mult1vac">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="mult1vac.me/theme/css/styles.css"/>
   </head>
 
   <body>
     <div class="site">
       <header>
         <ul class="nav">
-          <li><a class="site-name" href="">数据之下</a></li>
+          <li><a class="site-name" href="mult1vac.me">数据之下</a></li>
             <li><a class="float-right" href="/pages/about.html">关于</a></li>
             <li><a class="float-right" href="/index.html">文章</a></li>
         </ul>
@@ -21,8 +21,8 @@
       <div id="content">
     <h1>Authors on 数据之下</h1>
 
-    <ul>        <li><a href="/author/mult1vac.html">mult1vac</a> (5)</li>
-        <li><a href="/author/tester.html">tester</a> (4)</li>
+    <ul>        <li><a href="mult1vac.me/author/mult1vac.html">mult1vac</a> (5)</li>
+        <li><a href="mult1vac.me/author/tester.html">tester</a> (4)</li>
     </ul>
       </div>
 
