--- a/output/tags.html
+++ b/output/tags.html
@@ -5,33 +5,33 @@
     <meta charset="utf-8" />
     <meta name="author" content="mult1vac">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="mult1vac.me/theme/css/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="/theme/css/styles.css"/>
   </head>
 
   <body>
     <div class="site">
       <header>
         <ul class="nav">
-          <li><a class="site-name" href="mult1vac.me">数据之下</a></li>
+          <li><a class="site-name" href="">数据之下</a></li>
             <li><a class="float-right" href="/pages/about.html">关于</a></li>
             <li><a class="float-right" href="/index.html">文章</a></li>
         </ul>
       </header>
 
       <div id="content">
-    <h1>Tags for 数据之下</h1>        <li><a href="mult1vac.me/tag/ce-shi.html">测试</a> (1)</li>
-        <li><a href="mult1vac.me/tag/ensembling.html">ensembling</a> (2)</li>
-        <li><a href="mult1vac.me/tag/gini.html">gini</a> (1)</li>
-        <li><a href="mult1vac.me/tag/gong-kai.html">公开</a> (1)</li>
-        <li><a href="mult1vac.me/tag/insurance.html">insurance</a> (1)</li>
-        <li><a href="mult1vac.me/tag/kaggle.html">kaggle</a> (2)</li>
-        <li><a href="mult1vac.me/tag/lasagne.html">lasagne</a> (1)</li>
-        <li><a href="mult1vac.me/tag/math.html">math</a> (1)</li>
-        <li><a href="mult1vac.me/tag/mesos.html">Mesos</a> (1)</li>
-        <li><a href="mult1vac.me/tag/nolearn.html">nolearn</a> (1)</li>
-        <li><a href="mult1vac.me/tag/poisson.html">poisson</a> (1)</li>
-        <li><a href="mult1vac.me/tag/stacking.html">stacking</a> (1)</li>
-        <li><a href="mult1vac.me/tag/xgboost.html">xgboost</a> (1)</li>
+    <h1>Tags for 数据之下</h1>        <li><a href="/tag/ce-shi.html">测试</a> (1)</li>
+        <li><a href="/tag/ensembling.html">ensembling</a> (2)</li>
+        <li><a href="/tag/gini.html">gini</a> (1)</li>
+        <li><a href="/tag/gong-kai.html">公开</a> (1)</li>
+        <li><a href="/tag/insurance.html">insurance</a> (1)</li>
+        <li><a href="/tag/kaggle.html">kaggle</a> (2)</li>
+        <li><a href="/tag/lasagne.html">lasagne</a> (1)</li>
+        <li><a href="/tag/math.html">math</a> (1)</li>
+        <li><a href="/tag/mesos.html">Mesos</a> (1)</li>
+        <li><a href="/tag/nolearn.html">nolearn</a> (1)</li>
+        <li><a href="/tag/poisson.html">poisson</a> (1)</li>
+        <li><a href="/tag/stacking.html">stacking</a> (1)</li>
+        <li><a href="/tag/xgboost.html">xgboost</a> (1)</li>
       </div>
 
       <footer>
