--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -20,12 +20,19 @@
 
       <div id="content">
 <div class="article">
-  <h2>About</h2>
+  <!-- <h2>About</h2> -->
   <blockquote>
 <p>Everyday is an opportunity to measure and reduce the personal residual. My only goal is to gradient boost over myself of yesterday. And to repeat this everyday with an unconquerable spirit. </p>
 </blockquote>
-<p>隐居在杭城的数据汪，目前的主业是享受生活，副业是在<a href="http://www.dxy.cn/">花厂(DXY.CN)</a>从事数据科学相关工作。爱好机器学习、函数式编程、电子竞技、汽车、音乐。</p>
-<h4>联系方式</h4>
+<h4>关于</h4>
+<ul>
+<li>一个矫情的程序员，数据科学汪</li>
+<li>曾经在花厂和猪场工作，创业未半而中道崩殂</li>
+<li>长期摇摆在 INTJ 和 INFJ，Ennegram 5w4</li>
+<li>长期加点心理学和语言学天赋树</li>
+<li>爱好机器学习、函数式编程、电子竞技、汽车、摇滚乐</li>
+</ul>
+<h4>联系</h4>
 <ul>
 <li>Github: <a href="https://github.com/apex51">apex51</a></li>
 <li>Email: nju.jianghao#foxmail.com </li>
