--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -20,7 +20,7 @@
 
       <div id="content">
 <div class="article">
-  <h2>Resume</h2>
+  <!-- <h2>Resume</h2> -->
   <h2>个人简介</h2>
 <ul>
 <li>手机：15850730108</li>
