--- a/output/tags.html
+++ b/output/tags.html
@@ -19,17 +19,16 @@
       </header>
 
       <div id="content">
-    <h1>Tags for 数据之下</h1>        <li><a href="/tag/ce-shi.html">测试</a> (1)</li>
+    <h1>Tags for 数据之下</h1>        <li><a href="/tag/chuang-zuo.html">创作</a> (1)</li>
         <li><a href="/tag/ensembling.html">ensembling</a> (2)</li>
         <li><a href="/tag/gini.html">gini</a> (1)</li>
-        <li><a href="/tag/gong-kai.html">公开</a> (1)</li>
         <li><a href="/tag/insurance.html">insurance</a> (1)</li>
         <li><a href="/tag/kaggle.html">kaggle</a> (2)</li>
         <li><a href="/tag/lasagne.html">lasagne</a> (1)</li>
         <li><a href="/tag/math.html">math</a> (1)</li>
-        <li><a href="/tag/mesos.html">Mesos</a> (1)</li>
         <li><a href="/tag/nolearn.html">nolearn</a> (1)</li>
         <li><a href="/tag/poisson.html">poisson</a> (1)</li>
+        <li><a href="/tag/si-kao.html">思考</a> (1)</li>
         <li><a href="/tag/stacking.html">stacking</a> (1)</li>
         <li><a href="/tag/xgboost.html">xgboost</a> (1)</li>
       </div>
