--- a/output/why-should-i-create.html
+++ b/output/why-should-i-create.html
@@ -37,7 +37,7 @@
 <p>“When you don't create things, you become defined by your tastes rather than ability. Your tastes only narrow &amp; exclude people. So create.”<br>
 - by why_the_lucky_stiff  </p>
 </blockquote>
-<p>参与一段不成功的短暂创业后，我打算在家赋闲一段时间，回顾和调整，思考什么才是接下来要做的正确的事。搜罗中读到最近 Twitter 上很火的、并被翻译成多国文字的推文  <a href="http://mp.weixin.qq.com/s?__biz=MzAwNzU2NzI3Nw==&amp;mid=2650532368&amp;idx=1&amp;sn=86c37e6c5358a639fd14d9ae4b9ee0aa&amp;chksm=837368d2b404e1c4539c5b7f6174e7b6b19be82230bf120d8ccbbf9357e2d2adb10e3902a728&amp;scene=21#wechat_redirect">Naval Ravikant：如何变的富有，不需要任何的运气</a> ，很喜欢。</p>
+<p>短暂地参与一段创业并退出后，我打算在家赋闲一段时间，回顾和调整，思考什么才是接下来要做的正确的事。搜罗中读到最近 Twitter 上很火的、并被翻译成多国文字的推文  <a href="http://mp.weixin.qq.com/s?__biz=MzAwNzU2NzI3Nw==&amp;mid=2650532368&amp;idx=1&amp;sn=86c37e6c5358a639fd14d9ae4b9ee0aa&amp;chksm=837368d2b404e1c4539c5b7f6174e7b6b19be82230bf120d8ccbbf9357e2d2adb10e3902a728&amp;scene=21#wechat_redirect">Naval Ravikant：如何变的富有，不需要任何的运气</a> ，很喜欢。</p>
 <p>Naval 的观点，总结起来是说，靠租赁时间是无法获得财富自由的，财富自由只能通过拥有睡后收入的资产来获得；这个世界没有快速致富的体系，一生中所有的回报，财富、关系、或者知识，都是来源于复利，那些所谓的快速致富体系只是告诉你怎么从别人身上掠夺；通过为社会创造想要却不知道如何得到的作品可以让你变得富有；程序和媒体作品是无需别人许可即可使用的规模化杠杆；将以上两者结合起来，创造出可规模化的资产，你就能获得财富自由。</p>
 <p>反复读了很多遍，意识到自己的人生中缺少了主动的创作。自由地学习和探索，让我之前度过了很多年的快乐成长期。但学习本身并不能直接地创造财富。通过学习，满足了对世界的好奇和个人知识体系的完备，学习带来的爽，是暗爽。创作却可以直接地运用习得的知识去影响世界。</p>
 <p>一篇文字，一段视频，几行代码，都是创作。</p>
