--- a/output/why-should-i-create.html
+++ b/output/why-should-i-create.html
@@ -33,7 +33,8 @@
 </div>
 
 <div class="article">
-  <blockquote>
+  <p><img alt="" src="/images/1/create.jpeg"></p>
+<blockquote>
 <p>“When you don't create things, you become defined by your tastes rather than ability. Your tastes only narrow &amp; exclude people. So create.”<br>
 - by why_the_lucky_stiff  </p>
 </blockquote>
