--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -27,10 +27,11 @@
 <h4>关于</h4>
 <ul>
 <li>一个矫情的程序员，数据科学汪</li>
-<li>曾经在花厂和猪场工作，创业未半而中道崩殂</li>
-<li>长期摇摆在 INTJ 和 INFJ，Ennegram 5w4</li>
+<li>在花厂和猪场工作过，创业未半而中道崩殂</li>
+<li>MBTI 长期摇摆在 INTJ 和 INFJ，Ennegram 5w4</li>
 <li>长期加点心理学和语言学天赋树</li>
-<li>爱好机器学习、函数式编程、电子竞技、汽车、摇滚乐</li>
+<li>一名快乐的 Indie Hacker，长期关注程序员微创业</li>
+<li>爱好机器学习、函数式编程、电子竞技、汽车、摇滚乐和其它</li>
 </ul>
 <h4>联系</h4>
 <ul>
