--- a/output/chatbot-startups-abroad.html
+++ b/output/chatbot-startups-abroad.html
@@ -33,7 +33,8 @@
 </div>
 
 <div class="article">
-  <p><a href="https://www.admithub.com/">AdmitHub</a>
+  <p><img alt="" src="/images/3/startup.jpeg"></p>
+<p><a href="https://www.admithub.com/">AdmitHub</a>
 类型：ToB
 领域：教育
 位置：波士顿
