--- a/output/chatbot-startups-domestic.html
+++ b/output/chatbot-startups-domestic.html
@@ -35,10 +35,10 @@
 <div class="article">
   <p><img alt="" src="/images/4/startup2.jpeg"></p>
 <p><a href="http://www.yige.ai/">一个AI</a>
-类型：ToB、ToD
-领域：Bot 创建平台
-位置：北京
-由世纪佳缘开发的免费创建虚拟对话机器人（Bot）应用的在线平台。</p>
+<em> 类型：ToB、ToD
+</em> 领域：Bot 创建平台
+<em> 位置：北京
+</em> 由世纪佳缘开发的免费创建虚拟对话机器人（Bot）应用的在线平台。</p>
 <p><a href="https://www.bind.ai/">bind.ai</a>
 类型：ToB
 领域：AI 解决方案提供商
