--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -32,7 +32,7 @@
             <div class="header">
                 <ul class="nav nav-pills pull-right">
                     <li class=""><a href="..">Home</a></li>
-                        <li class="active"><a href="pages/about.html">About</a></li>
+                        <li class="active"><a href="../pages/about.html">About</a></li>
                     <li><a href="../archives.html">Archives</a></li>
                 </ul>
                 <h2 class="text-muted"><a href="..">FROM A MAKER</a></h3>
@@ -41,17 +41,17 @@
     <!-- <h1>About</h1> -->
     
 
-    <blockquote>
+    <p><img alt="normal" src="../images/pages/滨江钱塘.jpeg"></p>
+<blockquote>
 <p>Everyday is an opportunity to measure and reduce the personal residual. My only goal is to gradient boost over myself of yesterday. And to repeat this everyday with an unconquerable spirit. </p>
 </blockquote>
 <h4>关于</h4>
 <ul>
-<li>一个矫情的程序员，数据科学汪</li>
-<li>在花厂和猪场工作过，创业未半而中道崩殂</li>
-<li>MBTI 长期摇摆在 INTJ 和 INFJ，Ennegram 5w4</li>
-<li>长期加点心理学和语言学天赋树</li>
-<li>一名快乐的 Indie Hacker，长期关注程序员微创业</li>
-<li>爱好机器学习、函数式编程、电子竞技、汽车、摇滚乐和其它</li>
+<li>隐居杭城的数据科学汪，快乐的 <a href="https://www.indiehackers.com/">Indie Hacker</a>，关注程序员微创业；</li>
+<li>曾在花厂和猪场工作，创业未半而中道崩殂；</li>
+<li>MBTI 长期摇摆在 INTJ 和 INFJ，Ennegram 5w4；</li>
+<li>长期加点心理学和人类语言学天赋树；</li>
+<li>爱好机器学习、函数式编程、电子竞技、汽车、音乐；</li>
 </ul>
 <h4>联系</h4>
 <ul>
