--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -41,7 +41,8 @@
     <!-- <h1>蒋浩的简历</h1> -->
     
 
-    <h3>个人简介</h3>
+    <p>下载我的简历： <a href="../extra/蒋浩-简历.pdf">PDF</a> 或 <a href="../extra/蒋浩-简历.pages">Pages</a></p>
+<h3>个人简介</h3>
 <ul>
 <li>手机：15850730108</li>
 <li>邮箱：nju.jianghao@foxmail.com</li>
