--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -44,10 +44,9 @@
     <p>下载我的简历： <a href="../extra/蒋浩-简历.pdf">PDF</a> 或 <a href="../extra/蒋浩-简历.pages">Pages</a></p>
 <h3>个人简介</h3>
 <ul>
-<li>手机：15850730108</li>
-<li>邮箱：nju.jianghao@foxmail.com</li>
-<li>三年算法研发经验；数据科学方向的全栈工程师：懂算法、会技术、能数据分析、又能独立开发数据产品；</li>
-<li>希望加入一支使用深度学习技术的团队，并在团队中做长时间的积淀；</li>
+<li>四年数据工作经验，三年算法研发经验；数据科学方向的全栈工程师：懂算法、会技术、能数据分析、又能独立开发数据产品；</li>
+<li>希望加入一支使用深度学习技术的团队，并在团队中做长时间的积淀 @杭州/上海；</li>
+<li>手机 15850730108，微信 455055657，邮箱 nju.jianghao@foxmail.com</li>
 </ul>
 <h3>学历</h3>
 <ul>
@@ -69,7 +68,7 @@
 <li><strong>深度学习在用户模型的应用：</strong>使用 Tensorflow，结合用户的基础特征和时序行为，将多种深度学习模型（DNN、LSTM、RBM 等）作为编码器，应用于用户向量的生成；</li>
 <li><strong>推荐策略优化：</strong>负责 KNN 推荐策略的开发、与不同用户模型组合的尝试、参数调试、AB 测试和上线；目前 KNN 是网易新闻线上主力推荐策略之一；</li>
 <li><strong>新用户内容推荐：</strong>使用 bandit 算法，结合平台用户的先验数据，对新用户的冷启动推荐策略进行改进，提升了新用户的留存率；</li>
-<li><strong>其它：</strong>使用 Levenshtein 对地理位置文本信息标准化；使用 Greedy Set Cover 算法计算兴趣点的用户覆盖度，优化用户的召回率；团队技术分享；等等</li>
+<li><strong>其它：</strong>使用 Levenshtein 距离对地理位置文本信息标准化；使用 Greedy Set Cover 算法计算兴趣点的用户覆盖度，优化用户的召回率；团队技术分享；等等</li>
 </ul>
 <h4>2015.10 - 2017.04 算法工程师 丁香园 杭州</h4>
 <ul>
@@ -99,10 +98,10 @@
 <h3>技能树</h3>
 <ul>
 <li>良好的英文阅读和写作能力；</li>
-<li>工作中熟练使用 Python_Scala_Java，熟悉 R；</li>
-<li>熟悉 Mac_Linux 下的工程开发，熟练使用 Git，熟练使用 Maven_SBT，熟悉单元测试方法；</li>
-<li>熟练使用常用机器学习算法：通用线性模型、随机树和森林、GBDT、深度学习（RNN，LSTM，Seq2Seq）、非监督模型（k-means，LDA，Factor Analysis）；</li>
-<li>熟练使用 Python 下的 Sklearn、xgboost、Keras、Tensorflow、gensim 进行机器学习应用的开发，熟悉 Python 下的爬虫开发和后端开发；</li>
+<li>工作中熟练使用 Python/Scala/Java，熟悉 R；</li>
+<li>熟悉 Mac/Linux 下的工程开发，熟练使用 Git，熟练使用 Maven_SBT，熟悉单元测试方法；</li>
+<li>熟练使用常用机器学习算法：通用线性模型、随机树和森林、GBDT、深度学习（RNN，LSTM，seq2seq 等）、非监督模型（k-means，LDA，Factor Analysis）；</li>
+<li>熟练使用 Python 下的 NumPy、sklearn、XGBoost、Keras、TensorFlow、gensim 进行机器学习应用的开发，熟悉 Python 下的爬虫开发和后端开发；</li>
 <li>熟练使用 Java/Scala 基于 Hadoop、Spark、Spark Streaming、Hive、HBase、Redis、Kafka 的开发，熟悉 Elastic Search 并能快速搭建和优化搜索引擎；熟练使用 Hive-SQL 进行大规模数据分析和挖掘；</li>
 </ul>
             <footer id="contentinfo" class="footer">
