--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -80,13 +80,13 @@
 <li><strong>其他：</strong>在公司的医生问答产品中根据患者的提问，使用推荐算法和 NLP 推荐科室与医生；使用 word2vec 优化搜索；参与医学知识图谱的研发；做过一段时间的 HiveQL 分析师；带团队新人；2016 年在公司技术产品部门的个人绩效为 A+，(top 5%, 7/189)</li>
 </ul>
 <h4>2014.9 - 2015.9 咨询顾问 Ernst &amp; Young 金融咨询部门 上海</h4>
-<ol>
-<li>项目经历：我所在的团队帮助安盛天平车险理赔业务完成新老系统的数据迁移咨询项目，3 个人的团队 4 个月为 E&amp;Y 创造 350w 的收入；参与太平洋保险客户分级服务咨询项目，基于统计学方法，从客户属性与保单属性中设计一套保险客户的等级计算规则，识别高质量客户，并设计报表指标来帮助太保更好地管理服务质量；</li>
-<li>保险业数据挖掘：收集和抓取中外保险行业的数据，从数据趋势中分析国内的保险公司在科技、研发、模式上的项目机遇，为团队 BD 提供指导与支持；基于对特征工程、通用线性模型、随机森林、GBDT、神经网络、集成学习（bagging，boosting，stacking）、因子分析等数据挖掘方法的理解与熟练使用，带领数据团队参加了多个 kaggle 上保险相关的数据挖掘比赛：<a href="https://www.kaggle.com/c/liberty-mutual-group-property-inspection-prediction">固定资产风险预测</a>、<a href="https://www.kaggle.com/c/liberty-mutual-fire-peril">火灾损失率预估</a>、<a href="https://www.kaggle.com/c/axa-driver-telematics-analysis">车险持有者的驾驶行为分析</a>；</li>
-</ol>
+<ul>
+<li><strong>项目经历：</strong>我所在的团队帮助安盛天平车险理赔业务完成新老系统的数据迁移咨询项目，3 个人的团队 4 个月为 E&amp;Y 创造 350w 的收入；参与太平洋保险客户分级服务咨询项目，基于统计学方法，从客户属性与保单属性中设计一套保险客户的等级计算规则，识别高质量客户，并设计报表指标来帮助太保更好地管理服务质量；</li>
+<li><strong>保险业数据挖掘：</strong>收集和抓取中外保险行业的数据，从数据趋势中分析国内的保险公司在科技、研发、模式上的项目机遇，为团队 BD 提供指导与支持；基于对特征工程、通用线性模型、随机森林、GBDT、神经网络、集成学习（bagging，boosting，stacking）、因子分析等数据挖掘方法的理解与熟练使用，带领数据团队参加了多个 kaggle 上保险相关的数据挖掘比赛：<a href="https://www.kaggle.com/c/liberty-mutual-group-property-inspection-prediction">固定资产风险预测</a>、<a href="https://www.kaggle.com/c/liberty-mutual-fire-peril">火灾损失率预估</a>、<a href="https://www.kaggle.com/c/axa-driver-telematics-analysis">车险持有者的驾驶行为分析</a>；</li>
+</ul>
 <h3>其他</h3>
 <ul>
-<li>博客：<a href="https://mult1vac.me">mult1vac.me</a></li>
+<li>博客：<a href="https://mult1vac.me">https://mult1vac.me</a></li>
 <li>关注 KDD Cup、Kaggle、Data Science Bowl 等数据挖掘比赛，利用业余时间参加了一些 Kaggle 的数据挖掘比赛，比较好的成绩为：<ul>
 <li>Walmart 购物者购物行为预测(top 2%) </li>
 <li>Otto Group 产品分类竞赛(top 5%)</li>
