--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -101,7 +101,7 @@
 <li>工作中熟练使用 Python/Scala/Java，熟悉 R；</li>
 <li>熟悉 Mac/Linux 下的工程开发，熟练使用 Git，熟练使用 Maven_SBT，熟悉单元测试方法；</li>
 <li>熟练使用常用机器学习算法：通用线性模型、随机树和森林、GBDT、深度学习（RNN，LSTM，seq2seq 等）、非监督模型（k-means，LDA，Factor Analysis）；</li>
-<li>熟练使用 Python 下的 NumPy、sklearn、XGBoost、Keras、TensorFlow、gensim 进行机器学习应用的开发，熟悉 Python 下的爬虫开发和后端开发；</li>
+<li>熟练使用 Python 下的 NumPy、TensorFlow、Keras、sklearn、XGBoost、gensim 进行机器学习应用的开发，熟悉 Python 下的爬虫开发和后端开发；</li>
 <li>熟练使用 Java/Scala 基于 Hadoop、Spark、Spark Streaming、Hive、HBase、Redis、Kafka 的开发，熟悉 Elastic Search 并能快速搭建和优化搜索引擎；熟练使用 Hive-SQL 进行大规模数据分析和挖掘；</li>
 </ul>
             <footer id="contentinfo" class="footer">
