--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -45,7 +45,7 @@
 <h3>个人简介</h3>
 <ul>
 <li>四年数据工作经验，三年算法研发经验；数据科学方向的全栈工程师：懂算法、会技术、能数据分析、又能独立开发数据产品；</li>
-<li>希望加入一支使用深度学习技术的团队，并在团队中做长时间的积淀 @杭州/上海；</li>
+<li>希望加入一支使用深度学习技术的团队@杭州/上海，在团队中做长时间的积淀；</li>
 <li>手机 15850730108，微信 455055657，邮箱 nju.jianghao@foxmail.com</li>
 </ul>
 <h3>学历</h3>
@@ -56,19 +56,19 @@
 <h3>工作经历</h3>
 <h4>2018.04 - 2018.06 技术负责人 创业 上海</h4>
 <ul>
-<li><strong>加入和离开原因：</strong>在前几份工作中，一直期望能从事一段时间前端和后端的研发，以更好地理解技术和产品；在 CTO 好友的邀请下加入一家电商公司，进军共享自动售卖机领域，对我来说是个不错的学习契机；但公司在后来遇到融资问题，管理层也出现分歧，思考再三后选择离开；</li>
-<li><strong>负责技术研发：</strong>完善电商 app 的搜索和推荐功能，登录短信验证功能，上线电商的拼团功能；完成售货机的前端界面开发，后台管理系统开发，使用 MQTT 实现客户端到后端的长连接、实现机器货品和广告数据的热更新；</li>
-<li><strong>负责团队管理：</strong>负责前端团队、app 端团队的招聘、开发进度管理、代码审核；组织技术分享、聚餐等团建活动；</li>
+<li><strong>加入和离开原因：</strong>前几份工作中，一直期望能从事一段时间前端和后端的研发，以更好地理解技术和产品；在 CTO 好友的邀请下加入他所在的电商公司，正在进军共享自动售卖机领域，是一次不错的学习契机；但加入一段时间后遇到融资问题，管理层也出现分歧，思考再三选择离开；</li>
+<li><strong>负责技术研发：</strong>完善电商 app 的搜索和推荐功能，完善登录短信验证功能，上线电商的拼团功能；完成基于安卓的售货机前端开发，后台管理系统开发，使用 MQTT 实现客户端到后端的长连接、实现机器货品和广告数据的热更新；</li>
+<li><strong>负责团队管理：</strong>负责前端团队和 app 端团队的招聘、项目管理、代码审核；组织技术分享和团队建设；</li>
 </ul>
 <h4>2017.04 - 2018.04 高级算法工程师 网易 新闻推荐部 杭州</h4>
 <ul>
-<li><strong>工作内容：</strong>参与网易新闻的头条、短视频、PUSH 的用户模型和推荐策略的研发工作；</li>
-<li><strong>丰富用户模型的特征工程：</strong>编写、部署和监控基础日志解析任务，添加新的行为、并将其转为用户的兴趣点；利用数据挖掘方法，不断构造新的特征（例如频繁项集、黄金点击、时长百分位、性别预测、时间段偏好等），并通过 AB 测试进行特征选择；</li>
-<li><strong>高维度向量近邻检索的研究：</strong>完成 LSH (Locality Sensitive Hashing) 在多种距离标准下的 Java 实现，解决大规模高维度用户向量在近邻搜索中的时间问题，方便快速生成不同用户向量的近邻数据供推荐使用；</li>
-<li><strong>深度学习在用户模型的应用：</strong>使用 Tensorflow，结合用户的基础特征和时序行为，将多种深度学习模型（DNN、LSTM、RBM 等）作为编码器，应用于用户向量的生成；</li>
-<li><strong>推荐策略优化：</strong>负责 KNN 推荐策略的开发、与不同用户模型组合的尝试、参数调试、AB 测试和上线；目前 KNN 是网易新闻线上主力推荐策略之一；</li>
-<li><strong>新用户内容推荐：</strong>使用 bandit 算法，结合平台用户的先验数据，对新用户的冷启动推荐策略进行改进，提升了新用户的留存率；</li>
-<li><strong>其它：</strong>使用 Levenshtein 距离对地理位置文本信息标准化；使用 Greedy Set Cover 算法计算兴趣点的用户覆盖度，优化用户的召回率；团队技术分享；等等</li>
+<li><strong>工作内容：</strong>参与网易新闻的内容推荐、视频推荐、智能推送等推荐算法和用户画像的研发；</li>
+<li><strong>用户模型特征工程：</strong>利用统计学方法和机器学习算法，从网易拥有的多种来源的基础数据和行为数据中，挖掘新特征（例如：频繁项集、黄金点击、时长百分位、性别预测、热门预测、时间偏好、超/次线性特征等），使用多种方法进行特征选择，不断提升推荐算法的效果；</li>
+<li><strong>高维度向量近邻检索：</strong>对高维向量快速检索技术进行研究，并完成 LSH (Locality Sensitive Hashing) 的多种距离标准的 Java 实现，为团队解决了在大规模高维用户向量近邻搜索中的效率问题，快速生成模型向量的近邻数据，加快模型调参和响应速度；</li>
+<li><strong>深度学习在推荐的应用：</strong>使用 TensorFlow，结合业界在深度学习方面最新的实践，将多种深度学习模型（DNN、LSTM、RBM 等）应用于内容推荐中；</li>
+<li><strong>推荐策略优化：</strong>负责多种推荐策略的设计、开发、参数调试、AB 测试和上线；其中负责的 KNN 策略，是网易新闻线上效果最好的推荐策略之一；</li>
+<li><strong>新用户内容推荐：</strong>使用 bandit 算法，结合平台用户特征的行为先验，对新用户的冷启动推荐策略进行改良，提升了新用户的停留时长和留存；</li>
+<li><strong>其它：</strong>使用 Levenshtein 距离对位置文本信息标准化，方便了地理位置的处理；在 Spark 上开发贪心集合覆盖算法，优化活跃用户的兴趣点覆盖度；团队技术分享；等等</li>
 </ul>
 <h4>2015.10 - 2017.04 算法工程师 丁香园 杭州</h4>
 <ul>
@@ -93,14 +93,14 @@
 <li>Home Depot 搜索相关性预测(top 10%)</li>
 </ul>
 </li>
-<li>本科项目：和同学一起制作了一个基于 Arm Linux 的智能家居机器人，可以自动调节或通过网络控制家中电子设备，并在当年物联网比赛中获奖；</li>
+<li>本科项目：和同学一起制作了一个基于 Arm Linux 的智能家居机器人，可以自动调节或通过网络控制家中电子设备，并在当年全国物联网比赛中获奖；</li>
 </ul>
 <h3>技能树</h3>
 <ul>
 <li>良好的英文阅读和写作能力；</li>
-<li>工作中熟练使用 Python/Scala/Java，熟悉 R；</li>
-<li>熟悉 Mac/Linux 下的工程开发，熟练使用 Git，熟练使用 Maven_SBT，熟悉单元测试方法；</li>
-<li>熟练使用常用机器学习算法：通用线性模型、随机树和森林、GBDT、深度学习（RNN，LSTM，seq2seq 等）、非监督模型（k-means，LDA，Factor Analysis）；</li>
+<li>工作中熟练使用 Python/Java/Scala，熟悉 R；</li>
+<li>熟悉 Mac/Linux 下的工程开发，熟练使用 Git，熟练使用 Maven/SBT，熟悉单元测试方法；</li>
+<li>熟练使用常用机器学习算法：通用线性模型、随机树和森林、GBDT、深度神经网络（RNN，LSTM，seq2seq 等）、非监督模型（k-means，LDA，Factor Analysis）；</li>
 <li>熟练使用 Python 下的 NumPy、TensorFlow、Keras、sklearn、XGBoost、gensim 进行机器学习应用的开发，熟悉 Python 下的爬虫开发和后端开发；</li>
 <li>熟练使用 Java/Scala 基于 Hadoop、Spark、Spark Streaming、Hive、HBase、Redis、Kafka 的开发，熟悉 Elastic Search 并能快速搭建和优化搜索引擎；熟练使用 Hive-SQL 进行大规模数据分析和挖掘；</li>
 </ul>
