--- a/output/pages/resume.html
+++ b/output/pages/resume.html
@@ -44,8 +44,8 @@
     <p>下载我的简历： <a href="../extra/蒋浩-简历.pdf">PDF</a> 或 <a href="../extra/蒋浩-简历.pages">Pages</a></p>
 <h3>个人简介</h3>
 <ul>
-<li>四年数据工作经验，三年算法研发经验；数据科学方向的全栈工程师：懂算法、会技术、能数据分析、又能独立开发数据产品；</li>
-<li>希望加入一支使用深度学习技术的团队@杭州/上海，在团队中做长时间的积淀；</li>
+<li>四年数据工作经验，三年算法研发经验；数据科学向的全栈：懂算法、会技术、能数据分析、又能独立开发数据产品；</li>
+<li>希望加入一支使用深度学习技术的团队 @杭州或上海，在团队中做长时间的积淀；</li>
 <li>手机 15850730108，微信 455055657，邮箱 nju.jianghao@foxmail.com</li>
 </ul>
 <h3>学历</h3>
@@ -93,7 +93,7 @@
 <li>Home Depot 搜索相关性预测(top 10%)</li>
 </ul>
 </li>
-<li>本科项目：和同学一起制作了一个基于 Arm Linux 的智能家居机器人，可以自动调节或通过网络控制家中电子设备，并在当年全国物联网比赛中获奖；</li>
+<li>业余时间专注开发个人的 side project；最近在学习和开发 chatbot 相关的技术；</li>
 </ul>
 <h3>技能树</h3>
 <ul>
