--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -35,7 +35,7 @@
                         <li class="active"><a href="../pages/about.html">About</a></li>
                     <li><a href="../archives.html">Archives</a></li>
                 </ul>
-                <h2 class="text-muted"><a href="..">FROM A MAKER</a></h3>
+                <h2 class="text-muted"><a href="..">仿生人梦见电子羊</a></h3>
 				<!-- <h2 class="text-muted"></h2> -->
              </div>
     <!-- <h1>About</h1> -->
@@ -67,7 +67,7 @@
                         <a href="/None">RSS</a>
                     </nav>
                     <address id="about" class="vcard body">
-                    &copy; <a href="..">FROM A MAKER</a> Proudly powered by <a href="http://getpelican.com/">Pelican</a>
+                    &copy; <a href="..">仿生人梦见电子羊</a> Proudly powered by <a href="http://getpelican.com/">Pelican</a>
                     </address><!-- /#about -->
             </footer><!-- /#contentinfo -->
         </div><!-- container -->
